fix: update nav-item styles to control visibility with display property

--- a/packages/client/src/ui/components/nav-item/style.module.css
+++ b/packages/client/src/ui/components/nav-item/style.module.css
@@ -53,12 +53,14 @@
 }
 
 .open {
+	display: block;
 	opacity: 1;
 	width: auto;
 	transition: all 200ms ease-in-out;
 }
 
 .close {
+	display: none;
 	opacity: 0;
 	width: 0;
 	transition: all 200ms ease-in-out;
